fix header spacing responsive

--- a/frontend/src/styles/Header.css
+++ b/frontend/src/styles/Header.css
@@ -143,7 +143,7 @@
 .menu-toggle {
   display: none;
   position: absolute;
-  right: 35px;
+  right: 30px;
   flex-direction: column;
   justify-content: center;
   gap: 4px;
@@ -245,7 +245,7 @@
   }
 
   .header-logo {
-    left: 35px;
+    left: 25px;
   }
 
   .header-logo img {
